--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@
   <title>Aditya's Resume</title>
 </head>
   <body style="width:100%; height:100%; margin:0;">
-    <iframe src="https://github.com/adityashetty0302/adityashetty0302.github.io/raw/master/Aditya%20Shetty%20Resume.pdf&embedded=true" style="width:100%; height:100%;" frameborder="0"></iframe>
+    <iframe src="https://docs.google.com/gview?url=https://github.com/adityashetty0302/adityashetty0302.github.io/raw/master/Aditya%20Shetty%20Resume.pdf&embedded=true" style="width:100%; height:100%;" frameborder="0"></iframe>
   </body>
 </html>
